# csharp_compiler

./: .gitignore  README.md  install_grammar.sh
.antlr/: MyGrammar.interp  MyGrammarLexer.interp  MyGrammarLexer.java  MyGrammarParser.java
.github/workflows/: blank.yml
cmake/: CompileOptions.cmake
examples/: cgt1  cgt1.ll  cgt1.s  codegen_test1.cs  codegen_test2.cs  min.cs  negative_test.cs  nod  nod.cs  opt_test  opt_test.cs  opt_test.ll  opt_test.s  prime  prime.cs  prime.ll  prime.s  scope_test  scope_test.cs  scope_test.ll  scope_test.s  substr.cs  test.cs  test1.cs  test3.cs  wtest.cs
src/app/: CMakeLists.txt  main.cpp
src/app/codegen/: codegen.cpp  codegen.hpp
src/app/grammar/: Csharp.g4  Csharp.interp  CsharpBaseListener.cpp  CsharpBaseListener.h  CsharpLexer.cpp  CsharpLexer.h  CsharpLexer.interp  CsharpListener.cpp  CsharpListener.h  CsharpParser.cpp  CsharpParser.h
src/app/grammar/.antlr/: CsharpLexer.java  CsharpLexer.tokens  CsharpParser.java
src/app/lexer/: lexer.cpp  lexer.hpp
src/app/optimizer/: optimizer.cpp  optimizer.hpp
src/app/parser/: parser.cpp  parser.hpp
src/app/parser/ast/: ast.cpp  ast.hpp
src/app/parser/symbol_table/: symbol_table.cpp  symbol_table.hpp
src/app/semantic/: semantic.cpp  semantic.hpp
tests/: CMakeLists.txt  lexer_tests.cpp  tests.cpp
